--- a/pom.xml
+++ b/pom.xml
@@ -6,23 +6,23 @@
 
     <groupId>com.heroku</groupId>
     <artifactId>herokudeployer</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>com.heroku.api</groupId>
             <artifactId>heroku-api</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>com.heroku.api</groupId>
             <artifactId>heroku-http-apache</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>com.heroku.api</groupId>
             <artifactId>heroku-json-jackson</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
